# ml-backend

./: README.md  gadget_rental.csv  pyproject.toml  render.yaml  requirements.txt  runtime.txt  setup.py  train_model.py
app/: __init__.py  config.py  main.py  ml_service.py  models.py
models/: rental_model.pkl  scaler.pkl
