[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-backend"
version = "1.0.0"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "scikit-learn==1.3.0",
    "pandas==2.0.3",
    "numpy==1.24.3",
    "joblib==1.3.2",
    "pydantic==2.4.2",
    "python-multipart==0.0.6",
]